grammar/v1.0.0-rc.2/.antlr/YiniParser.java
// Generated from d:/Sources/YINI-lang-WORK/yini-parser-typescript/grammar/v1.0.0-rc.1x/YiniParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class YiniParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		YINI_MARKER=1, SECTION_HEAD=2, TERMINAL_TOKEN=3, SS=4, EUR=5, CARET=6, 
		GT=7, LT=8, EQ=9, HASH=10, COMMA=11, COLON=12, OB=13, CB=14, OC=15, CC=16, 
		PLUS=17, DOLLAR=18, PC=19, AT=20, SEMICOLON=21, BOOLEAN_FALSE=22, BOOLEAN_TRUE=23, 
		NULL=24, EMPTY_OBJECT=25, EMPTY_LIST=26, SHEBANG=27, NUMBER=28, KEY=29, 
		IDENT=30, IDENT_BACKTICKED=31, STRING=32, TRIPLE_QUOTED_STRING=33, SINGLE_OR_DOUBLE=34, 
		R_AND_C_STRING=35, HYPER_STRING=36, ESC_SEQ=37, ESC_SEQ_BASE=38, NL=39, 
		SINGLE_NL=40, WS=41, BLOCK_COMMENT=42, COMMENT=43, LINE_COMMENT=44, INLINE_COMMENT=45, 
		IDENT_INVALID=46, REST=47;
	public static final int
		RULE_yini = 0, RULE_section = 1, RULE_terminal_line = 2, RULE_section_members = 3, 
		RULE_member = 4, RULE_member_colon_list = 5, RULE_value = 6, RULE_object_literal = 7, 
		RULE_objectMemberList = 8, RULE_objectMember = 9, RULE_list = 10, RULE_list_in_brackets = 11, 
		RULE_elements = 12, RULE_element = 13, RULE_number_literal = 14, RULE_null_literal = 15, 
		RULE_string_literal = 16, RULE_string_concat = 17, RULE_boolean_literal = 18, 
		RULE_empty_object = 19, RULE_empty_list = 20, RULE_bad_member = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"yini", "section", "terminal_line", "section_members", "member", "member_colon_list", 
			"value", "object_literal", "objectMemberList", "objectMember", "list", 
			"list_in_brackets", "elements", "element", "number_literal", "null_literal", 
			"string_literal", "string_concat", "boolean_literal", "empty_object", 
			"empty_list", "bad_member"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'\\u00A7'", "'\\u20AC'", "'^'", "'>'", "'<'", 
			"'='", "'#'", "','", "':'", "'['", "']'", "'{'", "'}'", "'+'", "'$'", 
			"'%'", "'@'", "';'", null, null, null, "'{}'", "'[]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "YINI_MARKER", "SECTION_HEAD", "TERMINAL_TOKEN", "SS", "EUR", "CARET", 
			"GT", "LT", "EQ", "HASH", "COMMA", "COLON", "OB", "CB", "OC", "CC", "PLUS", 
			"DOLLAR", "PC", "AT", "SEMICOLON", "BOOLEAN_FALSE", "BOOLEAN_TRUE", "NULL", 
			"EMPTY_OBJECT", "EMPTY_LIST", "SHEBANG", "NUMBER", "KEY", "IDENT", "IDENT_BACKTICKED", 
			"STRING", "TRIPLE_QUOTED_STRING", "SINGLE_OR_DOUBLE", "R_AND_C_STRING", 
			"HYPER_STRING", "ESC_SEQ", "ESC_SEQ_BASE", "NL", "SINGLE_NL", "WS", "BLOCK_COMMENT", 
			"COMMENT", "LINE_COMMENT", "INLINE_COMMENT", "IDENT_INVALID", "REST"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YiniParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YiniParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class YiniContext extends ParserRuleContext {
		public TerminalNode SHEBANG() { return getToken(YiniParser.SHEBANG, 0); }
		public List<TerminalNode> INLINE_COMMENT() { return getTokens(YiniParser.INLINE_COMMENT); }
		public TerminalNode INLINE_COMMENT(int i) {
			return getToken(YiniParser.INLINE_COMMENT, i);
		}
		public List<TerminalNode> NL() { return getTokens(YiniParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(YiniParser.NL, i);
		}
		public TerminalNode YINI_MARKER() { return getToken(YiniParser.YINI_MARKER, 0); }
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public Terminal_lineContext terminal_line() {
			return getRuleContext(Terminal_lineContext.class,0);
		}
		public TerminalNode EOF() { return getToken(YiniParser.EOF, 0); }
		public YiniContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_yini; }
	}

	public final YiniContext yini() throws RecognitionException {
		YiniContext _localctx = new YiniContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_yini);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SHEBANG) {
				{
				setState(44);
				match(SHEBANG);
				}
			}

			setState(50);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(47);
					match(INLINE_COMMENT);
					}
					} 
				}
				setState(52);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(53);
					match(NL);
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==YINI_MARKER) {
				{
				setState(59);
				match(YINI_MARKER);
				}
			}

			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INLINE_COMMENT) {
				{
				{
				setState(62);
				match(INLINE_COMMENT);
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(68);
				match(NL);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				section();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 142941741949444L) != 0) );
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(79);
				match(NL);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TERMINAL_TOKEN) {
				{
				setState(85);
				terminal_line();
				}
			}

			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(88);
				match(EOF);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionContext extends ParserRuleContext {
		public Section_membersContext section_members() {
			return getRuleContext(Section_membersContext.class,0);
		}
		public TerminalNode SECTION_HEAD() { return getToken(YiniParser.SECTION_HEAD, 0); }
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_section);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(91);
				match(SECTION_HEAD);
				}
				break;
			}
			setState(94);
			section_members();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Terminal_lineContext extends ParserRuleContext {
		public TerminalNode TERMINAL_TOKEN() { return getToken(YiniParser.TERMINAL_TOKEN, 0); }
		public List<TerminalNode> NL() { return getTokens(YiniParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(YiniParser.NL, i);
		}
		public TerminalNode INLINE_COMMENT() { return getToken(YiniParser.INLINE_COMMENT, 0); }
		public Terminal_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal_line; }
	}

	public final Terminal_lineContext terminal_line() throws RecognitionException {
		Terminal_lineContext _localctx = new Terminal_lineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_terminal_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(TERMINAL_TOKEN);
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(97);
					match(NL);
					}
					}
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				break;
			case 2:
				{
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INLINE_COMMENT) {
					{
					setState(102);
					match(INLINE_COMMENT);
					}
				}

				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(105);
					match(NL);
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Section_membersContext extends ParserRuleContext {
		public List<MemberContext> member() {
			return getRuleContexts(MemberContext.class);
		}
		public MemberContext member(int i) {
			return getRuleContext(MemberContext.class,i);
		}
		public Section_membersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section_members; }
	}

	public final Section_membersContext section_members() throws RecognitionException {
		Section_membersContext _localctx = new Section_membersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_section_members);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(113);
					member();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(116); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MemberContext extends ParserRuleContext {
		public TerminalNode KEY() { return getToken(YiniParser.KEY, 0); }
		public TerminalNode EQ() { return getToken(YiniParser.EQ, 0); }
		public List<TerminalNode> WS() { return getTokens(YiniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(YiniParser.WS, i);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(YiniParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(YiniParser.NL, i);
		}
		public Member_colon_listContext member_colon_list() {
			return getRuleContext(Member_colon_listContext.class,0);
		}
		public TerminalNode SECTION_HEAD() { return getToken(YiniParser.SECTION_HEAD, 0); }
		public Section_membersContext section_members() {
			return getRuleContext(Section_membersContext.class,0);
		}
		public Bad_memberContext bad_member() {
			return getRuleContext(Bad_memberContext.class,0);
		}
		public MemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member; }
	}

	public final MemberContext member() throws RecognitionException {
		MemberContext _localctx = new MemberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_member);
		int _la;
		try {
			int _alt;
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(KEY);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(119);
					match(WS);
					}
				}

				setState(122);
				match(EQ);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(123);
					match(WS);
					}
				}

				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4693467136L) != 0)) {
					{
					setState(126);
					value();
					}
				}

				setState(130); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(129);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(132); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				member_colon_list();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(SECTION_HEAD);
				setState(137);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
				case 1:
					{
					setState(136);
					section_members();
					}
					break;
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				bad_member();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Member_colon_listContext extends ParserRuleContext {
		public TerminalNode KEY() { return getToken(YiniParser.KEY, 0); }
		public TerminalNode COLON() { return getToken(YiniParser.COLON, 0); }
		public TerminalNode WS() { return getToken(YiniParser.WS, 0); }
		public ElementsContext elements() {
			return getRuleContext(ElementsContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(YiniParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(YiniParser.NL, i);
		}
		public Member_colon_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member_colon_list; }
	}

	public final Member_colon_listContext member_colon_list() throws RecognitionException {
		Member_colon_listContext _localctx = new Member_colon_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_member_colon_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(KEY);
			setState(143);
			match(COLON);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(144);
				match(WS);
				}
			}

			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				{
				setState(147);
				elements();
				}
				break;
			}
			setState(151); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(150);
					match(NL);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(153); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public Null_literalContext null_literal() {
			return getRuleContext(Null_literalContext.class,0);
		}
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public Number_literalContext number_literal() {
			return getRuleContext(Number_literalContext.class,0);
		}
		public Boolean_literalContext boolean_literal() {
			return getRuleContext(Boolean_literalContext.class,0);
		}
		public List_in_bracketsContext list_in_brackets() {
			return getRuleContext(List_in_bracketsContext.class,0);
		}
		public Object_literalContext object_literal() {
			return getRuleContext(Object_literalContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NULL:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				null_literal();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				string_literal();
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				number_literal();
				}
				break;
			case BOOLEAN_FALSE:
			case BOOLEAN_TRUE:
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				boolean_literal();
				}
				break;
			case OB:
			case EMPTY_LIST:
				enterOuterAlt(_localctx, 5);
				{
				setState(159);
				list_in_brackets();
				}
				break;
			case OC:
			case EMPTY_OBJECT:
				enterOuterAlt(_localctx, 6);
				{
				setState(160);
				object_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Object_literalContext extends ParserRuleContext {
		public TerminalNode OC() { return getToken(YiniParser.OC, 0); }
		public ObjectMemberListContext objectMemberList() {
			return getRuleContext(ObjectMemberListContext.class,0);
		}
		public TerminalNode CC() { return getToken(YiniParser.CC, 0); }
		public List<TerminalNode> NL() { return getTokens(YiniParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(YiniParser.NL, i);
		}
		public Empty_objectContext empty_object() {
			return getRuleContext(Empty_objectContext.class,0);
		}
		public Object_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object_literal; }
	}

	public final Object_literalContext object_literal() throws RecognitionException {
		Object_literalContext _localctx = new Object_literalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_object_literal);
		int _la;
		try {
			int _alt;
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,30,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				match(OC);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(164);
					match(NL);
					}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(170);
				objectMemberList();
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(171);
					match(NL);
					}
					}
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(177);
				match(CC);
				setState(181);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(178);
						match(NL);
						}
						} 
					}
					setState(183);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(184);
				empty_object();
				setState(188);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,29,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(185);
						match(NL);
						}
						} 
					}
					setState(190);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,29,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectMemberListContext extends ParserRuleContext {
		public List<ObjectMemberContext> objectMember() {
			return getRuleContexts(ObjectMemberContext.class);
		}
		public ObjectMemberContext objectMember(int i) {
			return getRuleContext(ObjectMemberContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(YiniParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(YiniParser.COMMA, i);
		}
		public List<TerminalNode> NL() { return getTokens(YiniParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(YiniParser.NL, i);
		}
		public Empty_objectContext empty_object() {
			return getRuleContext(Empty_objectContext.class,0);
		}
		public ObjectMemberListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectMemberList; }
	}

	public final ObjectMemberListContext objectMemberList() throws RecognitionException {
		ObjectMemberListContext _localctx = new ObjectMemberListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_objectMemberList);
		int _la;
		try {
			int _alt;
			setState(217);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEY:
				enterOuterAlt(_localctx, 1);
				{
				setState(193);
				objectMember();
				setState(204);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,32,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(194);
						match(COMMA);
						setState(198);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NL) {
							{
							{
							setState(195);
							match(NL);
							}
							}
							setState(200);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(201);
						objectMember();
						}
						} 
					}
					setState(206);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,32,_ctx);
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(207);
					match(COMMA);
					}
				}

				}
				break;
			case OC:
			case EMPTY_OBJECT:
				enterOuterAlt(_localctx, 2);
				{
				setState(210);
				empty_object();
				setState(214);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,34,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(211);
						match(NL);
						}
						} 
					}
					setState(216);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,34,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectMemberContext extends ParserRuleContext {
		public TerminalNode KEY() { return getToken(YiniParser.KEY, 0); }
		public TerminalNode COLON() { return getToken(YiniParser.COLON, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode WS() { return getToken(YiniParser.WS, 0); }
		public List<TerminalNode> NL() { return getTokens(YiniParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(YiniParser.NL, i);
		}
		public ObjectMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectMember; }
	}

	public final ObjectMemberContext objectMember() throws RecognitionException {
		ObjectMemberContext _localctx = new ObjectMemberContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_objectMember);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(219);
			match(KEY);
			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(220);
				match(WS);
				}
			}

			setState(223);
			match(COLON);
			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(224);
				match(NL);
				}
				}
				setState(229);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(230);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public ElementsContext elements() {
			return getRuleContext(ElementsContext.class,0);
		}
		public List_in_bracketsContext list_in_brackets() {
			return getRuleContext(List_in_bracketsContext.class,0);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_list);
		try {
			setState(234);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,38,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(232);
				elements();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(233);
				list_in_brackets();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
